--- a/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/src/app/componentes/cabecalho/cabecalho.component.html
@@ -1,6 +1,6 @@
-<header class="banner2">
+<header class="banner">
    <div class="ban">
-    <img src="HEADERF1LOGO.png" alt="">
+    <img src="HEADERF1LOGO.png" alt="Logo cabecalho">
     <div>
     <h1>FORMULA 1 MSC CRUISES</h1>
     <p>GRANDE PRÊMIO DE SÃO PAULO 2025</p>
