--- a/src/app/componentes/cabecalho/cabecalho.component.css
+++ b/src/app/componentes/cabecalho/cabecalho.component.css
@@ -1,10 +1,10 @@
-.banner2 {
-    background-color: #003366;
+.banner {
+    background-color: #100A49;
     height: 100px;
    
 }
 
-.banner2 img {
+.banner img {
     width: 150px;
     height: 100px;
     margin-left: 30px;
@@ -14,6 +14,6 @@
     display: flex;
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 15px;
     color: white;
 }
