--- a/src/app/componentes/cabecalho/cabecalho.component.css
+++ b/src/app/componentes/cabecalho/cabecalho.component.css
@@ -1,6 +1,11 @@
 .banner {
     background-color: #100A49;
     height: 100px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
    
 }
 
