--- a/src/styles.css
+++ b/src/styles.css
@@ -41,3 +41,28 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+/* Fontes para o card*/
+:root {
+	--font-montserrat: 'Montserrat', sans-serif;
+	--font-prata: 'Prata', serif;
+	--color-primaria: #6278F7;
+	--color-secundaria: #2E2E2E;
+	--font-weight-normal: 400;
+	--font-weight-bold: 700;
+  } 
+  
+  /* Lista de pilotos*/
+
+  .texto-titulo {
+	font-family: var(--font-prata);
+	font-size: 40px;
+	font-weight: var(--font-weight-normal);
+	line-height: 72px;
+	text-align: center;
+	color: var(--color-primaria);
+  }
+  .linha-destaque {
+	display: block;
+	margin: 0 auto;
+  }
