Inserindo pilotos mclaren

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-cabecalho></app-cabecalho>
+<div class="colocacao2025">
+    <app-lista-pilotos></app-lista-pilotos>
+</div>
+<app-colocacao-camp></app-colocacao-camp>
 <app-piloto></app-piloto>
 <app-rodape></app-rodape>
