--- a/src/app/componentes/lista-pilotos/lista-pilotos.component.css
+++ b/src/app/componentes/lista-pilotos/lista-pilotos.component.css
@@ -1,4 +1,5 @@
-.linha-destaque--grande {
-    width: 64px;
-    border-bottom: 4px solid var(--color-primaria);
+.texto-titulo {
+    color: #100A49;
+    font-weight: bold;
+    font-family: var(--font-montserrat);
 }
