Finalizando podio dos pilotos

--- a/src/app/componentes/cabecalho/cabecalho.component.css
+++ b/src/app/componentes/cabecalho/cabecalho.component.css
@@ -22,3 +22,10 @@
     gap: 15px;
     color: white;
 }
+
+.texto-titulo {
+    color: #100A49;
+    font-weight: bold;
+    font-family: var(--font-montserrat);
+    margin-top: 130px;
+}
