--- a/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/src/app/componentes/cabecalho/cabecalho.component.html
@@ -8,3 +8,10 @@
 </div>
    </div>
 </header>
+<body>
+   <section>
+      <h2 class="texto-titulo">
+          Classificação de 2025
+      </h2>
+  </section>
+</body>
