--- a/src/app/componentes/lista-pilotos/lista-pilotos.component.css
+++ b/src/app/componentes/lista-pilotos/lista-pilotos.component.css
@@ -1,4 +1,14 @@
-.linha-destaque--grande {
-    width: 64px;
-    border-bottom: 4px solid var(--color-primaria);
+.texto-titulo {
+    color: #100A49;
+    font-weight: bold;
+    font-family: var(--font-montserrat);
+    margin-top: 150px;
 }
+
+/*
+Foto Max Verstappen e Lando Norris
+
+  https://pbs.twimg.com/media/Gp3L7baXwAAq2sO?format=jpg&name=large
+  https://mclaren.bloomreach.io/cdn-cgi/image/format=webp,quality=80/delivery/resources/content/gallery/mclaren-racing/formula-1/2025/nsr/f1-75-live-m/web/2025_lando_team_pic_02.jpg 
+  https://cdn-image.as-web.jp/2019/03/14135344/5_XPB_977373_HiRes.jpg
+  */
