--- a/src/app/componentes/piloto/piloto.component.html
+++ b/src/app/componentes/piloto/piloto.component.html
@@ -1,7 +1,5 @@
-<section>
-    <button class="favorito-btn" (click)="alternarFavorito()">
-        <span>{{ piloto.favorito ? '\u2764' : '\u2661' }}</span>
-    </button>
+<div class="container-pilotos">
+<section *ngFor="let piloto of pilotos">
     <div class="card">
         <img [src]="piloto.imagem" [alt]="piloto.titulo" class="figura">
     </div>
@@ -10,3 +8,4 @@
         <h3 class="texto-h3">{{ piloto.autoria }}</h3>
     </div>
 </section>
+</div>
