--- a/src/app/componentes/lista-pilotos/lista-pilotos.component.html
+++ b/src/app/componentes/lista-pilotos/lista-pilotos.component.html
@@ -2,4 +2,5 @@
     <h2 class="texto-titulo">
         Classificação de 2025
     </h2>
+    <span class="linha-destaque linha-destaque--grande"></span>
 </section>
