--- a/src/app/componentes/piloto/piloto.component.css
+++ b/src/app/componentes/piloto/piloto.component.css
@@ -58,6 +58,8 @@ section {
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     background-color: white;
+    position: relative;
+    z-index: 1;
   }
 
   .info-piloto {
