--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
-<app-cabecalho></app-cabecalho>
-<app-carrossel></app-carrossel>
-<app-lista-pilotos></app-lista-pilotos>
-<app-piloto></app-piloto>
-<app-apoiadores></app-apoiadores>
-<app-rodape></app-rodape>
+
+<router-outlet></router-outlet>
