--- a/src/app/pages/home/cabecalho/cabecalho.component.html
+++ b/src/app/pages/home/cabecalho/cabecalho.component.html
@@ -6,10 +6,10 @@
          <p>GRANDE PRÊMIO DE SÃO PAULO 2025</p>
          <span>SÃO PAULO 07-09 NOVEMBRO</span>
          <br>
-         
       </div>
-      
+   
    </div>
    <div class="titulo-ingressos">
-   <a routerLink="/ingressos">INGRESSOS</a></div>
+      <a routerLink="/home">HOME</a>
+      <a routerLink="/ingressos">INGRESSOS</a></div>
 </header>
