--- a/src/app/pages/home/piloto/piloto.component.css
+++ b/src/app/pages/home/piloto/piloto.component.css
@@ -267,3 +267,12 @@ section {
       grid-template-columns: 1fr 1fr;
   }
 }
+
+
+
+@media (max-width: 600px){
+  .comparacao-container {
+    position: absolute;
+    top: 70%;
+  }
+}
