--- a/src/app/pages/home/rodape/rodape.component.css
+++ b/src/app/pages/home/rodape/rodape.component.css
@@ -59,3 +59,10 @@
     line-height: 1.3;
     font-size: 12px;
 }
+
+@media (max-width: 600px) {
+    .banner-rodape {
+        position: relative;
+        top: 70%;
+    }
+}
