--- a/src/app/pages/ingressos/cabecalhoing/cabecalhoing.component.css
+++ b/src/app/pages/ingressos/cabecalhoing/cabecalhoing.component.css
@@ -1,16 +1,16 @@
 /* src/app/componentes/cabecalho/cabecalho.component.css */
 
 .banner {
-    background-color: #100A49;
+    background-color: grey;
     height: 100px; /* Isso pode ser ajustado para 'auto' se o conteúdo empilhar */
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     z-index: 1000;
     justify-content: space-between;
     /* Adicione estas propriedades para o layout padrão (desktop) */
-    display: flex;
+
     align-items: center; /* Alinha o conteúdo (o .ban) verticalmente */
 }
 
@@ -19,32 +19,19 @@
     align-items: center;
     gap: 15px; /* Espaçamento entre a imagem e o bloco de texto */
     color: white;
-    padding-left: 30px; /* Usa padding em vez de margin-left na imagem */
-    /* Remova as margens fixas se houverem, use padding */
+    padding-left: 20%;
+    width: 200px;
+    padding-bottom: 20px;
   
 }
 
 .banner img {
     /* Remova o margin-left fixo para centralização no mobile */
-    width: 150px;
-    height: 100px;
+    max-width: 100%;
+    max-height: 50%;
 }
 
-.banner {
-    display: flex;
-    
-}
-
-.titulo-ingressos a {
-    color: white;
-    text-decoration: none;
-    padding-right: 20px;
-   
-   
-    
-}
-
-.texto-header h1, 
+.texto-header, 
 .texto-header p, 
 .texto-header span {
     /* Garante que o texto se comporte como um bloco para quebrar a linha naturalmente */
@@ -52,6 +39,25 @@
     white-space: normal; /* Garante que o texto quebre e não fique em uma linha só */
     line-height: 1.2; /* Ajuda na legibilidade após a quebra */
     margin: 0; /* Remove margens padrão que possam atrapalhar o alinhamento */
+    background-color: #100A49;
+    color: white;
+    text-align: center;
+    padding-top: 20px;
+
+}
+
+.texto-header a {
+    text-decoration: none;
+}
+
+.texto-header p {
+    font-size: 50px;
+    font-weight: bold;
+}
+
+.texto-header,
+.texto-header span {
+    font-size: 20px;
 }
 
 /* ---------------------------------------------------- */
@@ -89,5 +95,4 @@
         font-size: 0.8em; /* Reduz o tamanho da fonte */
     }
 }
-
 
