Tela de noticias iniciada

--- a/src/app/pages/home/cabecalho/cabecalho.component.html
+++ b/src/app/pages/home/cabecalho/cabecalho.component.html
@@ -11,5 +11,7 @@
    </div>
    <div class="titulo-ingressos">
       <a routerLink="/home">HOME</a>
-      <a routerLink="/ingressos">INGRESSOS</a></div>
+      <a routerLink="/ingressos">INGRESSOS</a>
+      <a routerLink="/noticias">NOTÍCIAS</a></div>
+     
 </header>
